# azure-iot-sdk-c

./: CMakeLists.txt
iothub_client/: CMakeLists.txt
iothub_client/devdoc/requirement_docs/: iothubclient_ll_requirements.md  iothubclient_requirements.md  iothubtransport_amqp_common_requirements.md  iothubtransport_amqp_device_requirements.md  iothubtransport_amqp_twin_messenger_requirements.md  iothubtransportamqp_requirements.md  iothubtransportamqp_ws_requirements.md
iothub_client/inc/: iothub_client.h  iothub_client_core.h  iothub_client_core_common.h  iothub_client_core_ll.h  iothub_client_ll.h  iothub_device_client.h
iothub_client/inc/internal/: iothub_client_private.h  iothub_transport_ll_private.h  iothubtransport_amqp_common.h  iothubtransport_amqp_device.h  iothubtransport_amqp_twin_messenger.h  iothubtransport_mqtt_common.h
iothub_client/samples/iothub_ll_telemetry_sample/: iothub_ll_telemetry_sample.c
iothub_client/src/: iothub_client.c  iothub_client_core.c  iothub_client_core_ll.c  iothub_client_ll.c  iothub_device_client.c  iothubtransport.c  iothubtransport_amqp_common.c  iothubtransport_amqp_device.c  iothubtransport_amqp_twin_messenger.c  iothubtransport_mqtt_common.c  iothubtransportamqp.c  iothubtransportamqp_websockets.c  iothubtransporthttp.c  iothubtransportmqtt.c  iothubtransportmqtt_websockets.c
iothub_client/tests/iothubclient_ll_ut/: iothubclient_ll_ut.c
iothub_client/tests/iothubclient_ut/: iothubclient_ut.c
iothub_client/tests/iothubclientcore_ll_ut/: iothub_client_core_ll_ut.c  iothubclientcore_ll_ut.c  main.c
iothub_client/tests/iothubclientcore_ut/: iothubclientcore_ut.c
iothub_client/tests/iothubtransport_amqp_common_ut/: iothubtransport_amqp_common_ut.c
iothub_client/tests/iothubtransport_mqtt_common_ut/: iothubtransport_mqtt_common_ut.c
iothub_client/tests/iothubtransport_ut/: iothubtransport_ut.c
iothub_client_manager/: CMakeLists.txt
iothub_client_manager/inc/iothub_client_manager/: iothub_client_manager.h
iothub_client_manager/samples/: CMakeLists.txt
iothub_client_manager/samples/iothub_client_manager_sample/: CMakeLists.txt  iothub_client_manager_sample.c
iothub_client_manager/src/: iothub_client_manager.c
(+4 files in other folders)
